src/components/imageViewer/imageViewer.css
.image-preview {
  width: 100vw;
  height: 100vh;

  position: absolute;
  top: 0px;
  left: 0px;
  overflow: scroll;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  z-index: 50;
}
.image {
  z-index: 5;
}
.image-operation {
  position: fixed;
  left: calc(50% - 200px);
  bottom: 30px;
  font-size: 25px;
  z-index: 6;
  background-color: black;
  opacity: 0.3;
  padding: 10px;
  border-radius: 20px;
}
.zoom-in-icon,
.zoom-out-icon,
.save-icon,
.clockwise-icon,
.counterclockwise-icon {
  margin: 20px;
  cursor: pointer;
}
.image-background {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0px;
  left: 0px;
}

